# R-Type

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-mingw32.sh  doxy.conf
.github/workflows/: compile.yml  doxygen-gh-pages.yml  lint_format.yml  mirror.yml  my_cppaction.yml  pr_review.yml  pr_title.yml
assets/: bydosWave.json  player.json  player1.json  player2.json  player3.json  player4.json  static.json
client/: CMakeLists.txt
client/include/: game_manager.hpp  lobby.hpp  room_manager.hpp  rtype_client.hpp
client/src/: GameManager.hpp  RTypeClient.hpp  RoomManager.cpp  RoomManager.hpp  create_entity.cpp  game_manager.hpp  launch_game.cpp  main.cpp  register_ecs.cpp  register_tcp_response.cpp  register_udp_response.cpp  room_manager.cpp  rtype_client.hpp  run_gui.cpp  setup_tcp_connection.cpp  setup_udp_connection.cpp
client/src/lobby/: event.cpp  playersList.cpp  run.cpp
client/src/lobby/initialization/: createMovableBox.cpp  createStaticBox.cpp  init.cpp  initText.cpp
cmake/: asio.cmake  dependencies.cmake  mingw32-toolchain.cmake
docs/: technical-and-comparative-Study.md
include/: RTypeConst.hpp  RTypeUDPProtol.hpp
lib/: CMakeLists.txt
lib/argParser/: ArgParser.cpp  (+2 more)
lib/network/: AsioClient.hpp  AsioServer.hpp  BuffSize.hpp  CMakeLists.txt  IClient.hpp  IServer.hpp  ResponseHandler.hpp
lib/network/tcp/: TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp
lib/network/udp/: UDPClient.cpp  UDPClient.hpp  UDPServer.cpp  UDPServer.hpp
server/: CMakeLists.txt
sprintReviews/: sprint2.md
srcTMP/: main.cpp
(+119 files in other folders)
